@@ -33,6 +33,7 @@ Bug fixes
  * Added labels to snippet bulk edit checkboxes for screen reader users (Martey Dodoo)
  * Middleware responses during page preview are now properly returned to the user (Matt Westcott)
  * Default text of page links in rich text uses the public page title rather than the admin display title (Andy Chosak)
+ * Specific page permission checks are now enforced when viewing a page revision (Andy Chosak)
 
 
 Upgrade considerations
