@@ -15,6 +15,7 @@ Changelog
  * Fix: Added labels to snippet bulk edit checkboxes for screen reader users (Martey Dodoo)
  * Fix: Middleware responses during page preview are now properly returned to the user (Matt Westcott)
  * Fix: Default text of page links in rich text uses the public page title rather than the admin display title (Andy Chosak)
+ * Fix: Specific page permission checks are now enforced when viewing a page revision (Andy Chosak)
 
 
 2.6.1 (05.08.2019)
